cabal-version:   3.0
name:            sparse-vector
version:         0.3.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md
synopsis: Sparse vector data structures
description: Sparse vector data structures

library
    exposed-modules:
        Data.SparseVector
        Data.SparseVector.Mutable
        Data.SparseVector.Strict
        Data.SparseVector.Strict.Mutable
        Data.SparseVector.Unboxed
        Data.SparseVector.Unboxed.Mutable

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        deepseq >=1,
        mtl >=2,
        vector >= 0.12

executable sparse-vector
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        sparse-vector

test-suite sparse-vector-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        sparse-vector,
        hspec >=2
